kubernetes/apps/external/external-dns-unifi/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: unifi-dns
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: external-dns-unifi
    egress:
      - toFQDNs:
          - matchName: unifi.home.arpa
        toPorts:
          - ports:
              - port: "443"
